--- a/index/static/css/style.css
+++ b/index/static/css/style.css
@@ -4,6 +4,7 @@
     --border: 2px solid #ddd;
     --left-msg-bg: #ececec;
     --right-msg-bg: #579ffb;
+    --right-msg-bg-hover: #4492FA;
   }
   
   html {
@@ -42,7 +43,7 @@
   }
   
   .msger-header {
-    /* display: flex; */
+    display: flex;
     font-size: medium;
     justify-content: space-between;
     padding: 10px;
@@ -50,6 +51,12 @@
     border-bottom: var(--border);
     background: #eee;
     color: #666;
+  }
+
+  .msger-header-prev,
+  .msger-header-setting {
+    height: 21.33px;
+    color: #B1B1B1;
   }
   
   .msger-chat {
@@ -100,6 +107,8 @@
   }
   .msg-info-time {
     font-size: 0.85em;
+    margin: 0 0.5rem 0 0.5rem;
+    color: #666;
   }
   
   .left-msg .msg-bubble {
@@ -136,14 +145,14 @@
   }
   .msger-send-btn {
     margin-left: 10px;
-    background: rgb(0, 196, 65);
+    background: var(--right-msg-bg);
     color: #fff;
     font-weight: bold;
     cursor: pointer;
     transition: background 0.23s;
   }
   .msger-send-btn:hover {
-    background: rgb(0, 180, 50);
+    background: var(--right-msg-bg-hover);
   }
   
   .msger-chat {
