--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -27,7 +27,7 @@
     <header class="msger-header">
       <i class="fas fa-chevron-left msger-header-prev"></i>
       <div class="msger-header-title">
-        😄 Emo Chatbot 😄
+        
       </div>
       <i class="fas fa-ellipsis-h msger-header-setting"></i>
     </header>
@@ -37,6 +37,7 @@
     </main>
 
     <form class="msger-inputarea">
+      <i class="far fa-image"></i>
       <input type="text" class="msger-input" id="textInput" placeholder="Enter your message...">
       <button type="submit" class="msger-send-btn">Send</button>
     </form>
