Add notice setting screen

--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -40,6 +40,13 @@
       <input type="text" class="msger-input" id="textInput" placeholder="Enter your message...">
       <button type="submit" class="msger-send-btn">Send</button>
     </form>
+
+    <div class="msger-setting"> 
+      <div class="msger-setting-body">
+        <input type="time">
+        <div class="msger-setting-save">저장</div>
+      </div> 
+    </div>
   </section>
   <!-- partial -->
   <script src='https://use.fontawesome.com/releases/v5.0.13/js/all.js'></script>
