--- a/index/static/css/style.css
+++ b/index/static/css/style.css
@@ -33,8 +33,10 @@
     height: 100vh;
     background-image: var(--body-bg);
     font-family: Helvetica, sans-serif;
+    overflow: hidden;
   }
   
+
   .msger {
     display: flex;
     flex-flow: column wrap;
@@ -48,6 +50,52 @@
     background: var(--msger-bg);
     box-shadow: 0 15px 15px -5px rgba(0, 0, 0, 0.2);
   }
+
+  @keyframes fadeIn{
+    from{
+      opacity: 0;
+      transform: translateX(-50%);
+    }
+
+    to{
+      opacity: 3;
+      transform: translateX(-50%) translateY(-50%);
+    }
+  }
+
+  .msger-setting { 
+    display: none; 
+  }
+
+  .msger-setting.show { 
+    width: 0;
+    height: 0;
+    margin: 0;
+    padding: 0;
+    display: flex; 
+  } 
+
+  .msger-setting-body { 
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    width: calc(100% - 20px);
+    max-width: 867px;
+    height: calc(100% - 50px);
+    border: var(--border);
+    border-radius: 5px;
+    background: var(--msger-bg);
+    box-shadow: 0 15px 15px -5px rgba(0, 0, 0, 0.2);
+    transform: translateX(-50%) translateY(-50%); 
+    animation: fadeIn 0.5s;
+    padding: 40px;
+    text-align: center;
+  }
+
+  .msger-setting-save{
+    cursor: pointer;
+  }
+
   
   .msger-header {
     display: flex;
@@ -217,3 +265,4 @@
     font-size: 30px;
     color: green;
   }
+
