--- a/index/static/css/style.css
+++ b/index/static/css/style.css
@@ -266,3 +266,81 @@
     color: green;
   }
 
+/* msger-loading-dot */
+.dot-pulse {
+  position: relative;
+  left: -9999px;
+  width: 1px;
+  height: 1px;
+  border-radius: 5px;
+  background-color: var(--right-msg-bg-hover);
+  color: var(--right-msg-bg-hover);
+  box-shadow: 9999px 0 0 -5px var(--right-msg-bg-hover);
+  animation: dotPulse 1.5s infinite linear;
+  animation-delay: .25s;
+  margin: 0 auto ;
+}
+
+.dot-pulse::before, .dot-pulse::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  width: 1px;
+  height: 1px;
+  border-radius: 5px;
+  background-color: var(--right-msg-bg-hover);
+  color: var(--right-msg-bg-hover);
+  margin: 0 auto ;
+}
+
+.dot-pulse::before {
+  box-shadow: 9984px 0 0 -5px var(--right-msg-bg-hover);
+  animation: dotPulseBefore 1.5s infinite linear;
+  animation-delay: 0s;
+}
+
+.dot-pulse::after {
+  box-shadow: 10014px 0 0 -5px var(--right-msg-bg-hover);
+  animation: dotPulseAfter 1.5s infinite linear;
+  animation-delay: .5s;
+}
+
+@keyframes dotPulseBefore {
+  0% {
+    box-shadow: 9984px 0 0 -5px var(--right-msg-bg-hover);
+  }
+  30% {
+    box-shadow: 9984px 0 0 2px var(--right-msg-bg-hover);
+  }
+  60%,
+  100% {
+    box-shadow: 9984px 0 0 -5px var(--right-msg-bg-hover);
+  }
+}
+
+@keyframes dotPulse {
+  0% {
+    box-shadow: 9999px 0 0 -5px var(--right-msg-bg-hover);
+  }
+  30% {
+    box-shadow: 9999px 0 0 2px var(--right-msg-bg-hover);
+  }
+  60%,
+  100% {
+    box-shadow: 9999px 0 0 -5px var(--right-msg-bg-hover);
+  }
+}
+
+@keyframes dotPulseAfter {
+  0% {
+    box-shadow: 10014px 0 0 -5px var(--right-msg-bg-hover);
+  }
+  30% {
+    box-shadow: 10014px 0 0 2px var(--right-msg-bg-hover);
+  }
+  60%,
+  100% {
+    box-shadow: 10014px 0 0 -5px var(--right-msg-bg-hover);
+  }
+}
