Update setting button function

--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -29,7 +29,7 @@
       <div class="msger-header-title">
         
       </div>
-      <i class="fas fa-ellipsis-h msger-header-setting"></i>
+      <i class="fas fa-ellipsis-h msger-header-setting" onclick="setting_open()"></i>
     </header>
 
     <main class="msger-chat">
@@ -44,7 +44,7 @@
     <div class="msger-setting"> 
       <div class="msger-setting-body">
         <input type="time">
-        <div class="msger-setting-save">저장</div>
+        <div class="msger-setting-save" onclick="setting_notice_time()">저장</div>
       </div> 
     </div>
   </section>
