--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -54,37 +54,34 @@
               <p class="time-am selected">오전</p>
               <p class="time-pm">오후</p>
             </div>
-            <!-- <div class="time-hhmm">00:00</div> -->
-            <input class="time-hhmm" list="times" name="times" >
-            <datalist id="times">
-              <option value="00:00">
-              <option value="00:30">
-              <option value="01:00">
-              <option value="01:30">
-              <option value="02:00">
-              <option value="02:30">
-              <option value="03:00">
-              <option value="03:30">
-              <option value="04:00">
-              <option value="04:30">
-              <option value="05:00">
-              <option value="05:30">
-              <option value="06:00">
-              <option value="06:30">
-              <option value="07:00">
-              <option value="07:30">
-              <option value="08:00">
-              <option value="08:30">
-              <option value="09:00">
-              <option value="09:30">
-              <option value="10:00">
-              <option value="10:30">
-              <option value="11:00">
-              <option value="11:30">
-              
-            </datalist>
+            <!-- <input class="time-hhmm" list="times" name="times" value="00:00"> -->
+            <select class="time-hhmm" name="times">
+              <option value="00:00">00:00</option>
+              <option value="00:30">00:30</option>
+              <option value="01:00">01:00</option>
+              <option value="01:30">01:30</option>
+              <option value="02:00">02:00</option>
+              <option value="02:30">02:30</option>
+              <option value="03:00">03:00</option>
+              <option value="03:30">03:30</option>
+              <option value="04:00">04:00</option>
+              <option value="04:30">04:30</option>
+              <option value="05:00">05:00</option>
+              <option value="05:30">05:30</option>
+              <option value="06:00">06:00</option>
+              <option value="06:30">06:30</option>
+              <option value="07:00">07:00</option>
+              <option value="07:30">07:30</option>
+              <option value="08:00">08:00</option>
+              <option value="08:30">08:30</option>
+              <option value="09:00">09:00</option>
+              <option value="09:30">09:30</option>
+              <option value="10:00">10:00</option>
+              <option value="10:30">10:30</option>
+              <option value="11:00">11:00</option>
+              <option value="11:30">11:30</option>
+            </select>
           </div>
-          <input type="time" class="time-input-real" hidden>
         </div>
         <div class="msger-setting-save" onclick="setting_notice_time()">저장</div>
       </div> 
