--- a/index/static/css/style.css
+++ b/index/static/css/style.css
@@ -278,6 +278,7 @@
     border: 1px solid var(--right-msg-bg-hover);
     transition:  0.23s;
     cursor: pointer;
+    max-width: 200px;
   }
   
   
