Test emotion analysis

--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -55,9 +55,9 @@
               <p class="time-pm">오후</p>
             </div>
             <!-- <input class="time-hhmm" list="times" name="times" value="00:00"> -->
-            <select class="time-hhmm" name="times">
-              <option value="00:00">00:00</option>
-              <option value="00:30">00:30</option>
+            <select class="time-hhmm" name="times" size="10">
+              <option value="00:00">12:00</option>
+              <option value="00:30">12:30</option>
               <option value="01:00">01:00</option>
               <option value="01:30">01:30</option>
               <option value="02:00">02:00</option>
