--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -55,7 +55,7 @@
               <p class="time-pm">오후</p>
             </div>
             <!-- <input class="time-hhmm" list="times" name="times" value="00:00"> -->
-            <select class="time-hhmm" name="times" size="10">
+            <select class="time-hhmm" name="times">
               <option value="00:00">12:00</option>
               <option value="00:30">12:30</option>
               <option value="01:00">01:00</option>
