Update time setting css

--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -29,7 +29,7 @@
       <div class="msger-header-title">
         
       </div>
-      <i class="fas fa-ellipsis-h msger-header-setting" onclick="setting_open()"></i>
+      <i class="fas fa-ellipsis-h msger-header-setting" onclick="setting_toggle()"></i>
     </header>
 
     <main class="msger-chat">
@@ -43,6 +43,7 @@
 
     <div class="msger-setting"> 
       <div class="msger-setting-body">
+        <hr class="msger-setting-line">
         <div class="setting-title">
           <i class="fas fa-cog setting-icon"></i>
           <h2>Settings</h2>
