--- a/index/static/css/style.css
+++ b/index/static/css/style.css
@@ -64,51 +64,74 @@
   }
 
   .msger-setting { 
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     display: none; 
+    margin: 0;
+    padding: 0;
+    background-color: rgba(0, 0, 0, 0.4); 
   }
 
   .msger-setting.show { 
-    width: 0;
-    height: 0;
-    margin: 0;
-    padding: 0;
-    display: flex; 
+    display: flex;
   } 
+  .msger-setting-line{
+    position: absolute; 
+    top: -5%; 
+    left: 50%; 
+    transform: translateX(-50%); 
+    color: #fff;
+    background-color: #fff;
+    border: 2px solid #fff;
+    border-radius: 5px;
+    height: 5px;
+    width: 60px;
+    
+  }
 
   .msger-setting-body { 
     position: absolute; 
-    top: 50%; 
+    top: 75%; 
     left: 50%; 
     width: calc(100% - 20px);
     max-width: 867px;
-    height: calc(100% - 50px);
+    height: calc(50% - 50px);
     border: var(--border);
-    border-radius: 5px;
+    border-radius: 20px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     background: var(--msger-bg);
     box-shadow: 0 15px 15px -5px rgba(0, 0, 0, 0.2);
     transform: translateX(-50%) translateY(-50%); 
     animation: fadeIn 0.5s;
-    padding: 50px;
-    text-align: center;
+    padding: 40px;
   }
 
   .setting-title{
     display: flex;
     justify-content: center;
     height: 40px;
-    color: #666;
-    margin-bottom: 50px;
-    border-bottom: 1px solid #B1B1B1;
+    color: #333333;
+    margin: 0 auto 20px auto;
   }
+  h2{
+    width: 100%;
+  }
+
+
   .setting-icon{
     margin-right: 10px;
     height: 26px;
+    display: none;
   }
   
   .setting-time{
     display: flex;
     justify-content: space-between;
-    margin-bottom: 100px;
+    margin: 0 auto 100px auto;
   }
 
   .time-title{
@@ -160,18 +183,19 @@
 
   .msger-setting-save{
     cursor: pointer;
-    border-radius: 20px;
+    border-radius: 15px;
     border: 1px solid var(--right-msg-bg);
     background-color: var(--right-msg-bg);
     color: #fff;
     line-height: 40px;
     width: 100%;
+    text-align: center;
   }
 
   .msger-setting-save:hover{
-    border: 1px solid var(--right-msg-bg);
-    background-color: #fff;
-    color: var(--right-msg-bg);
+    border: 1px solid var(--right-msg-bg-hover);
+    background-color: var(--right-msg-bg-hover);
+    color: #fff;
     transition: .1s;
   }
   
