--- a/index/static/css/style.css
+++ b/index/static/css/style.css
@@ -41,9 +41,9 @@
     display: flex;
     flex-flow: column wrap;
     justify-content: space-between;
-    width: 100%;
+    width: calc(100% - 20px);
     max-width: 867px;
-    margin: 25px 10px;
+    margin: auto;
     height: calc(100% - 50px);
     border: var(--border);
     border-radius: 5px;
