--- a/index/static/css/style.css
+++ b/index/static/css/style.css
@@ -97,12 +97,12 @@
     top: 75%; 
     left: 50%; 
     width: calc(100% - 20px);
-    max-width: 867px;
     height: calc(50% - 50px);
-    border: var(--border);
+    max-width: 867px;
+    border: 1px solid #fff;
     border-radius: 20px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
     background: var(--msger-bg);
     box-shadow: 0 15px 15px -5px rgba(0, 0, 0, 0.2);
     transform: translateX(-50%) translateY(-50%); 
@@ -436,5 +436,25 @@
   60%,
   100% {
     box-shadow: 10014px 0 0 -5px var(--right-msg-bg-hover);
+  }
+}
+
+
+@media screen and (max-width: 500px){
+  .msger{
+    width: 100%;
+    height: 100%;
+  }
+
+  .msger-setting-body{
+    position: absolute; 
+    top: 85%; 
+    left: 50%; 
+    width: 100%;
+    transform: translateX(-50%) translateY(-50%); 
+  }
+
+  .setting-time{
+    margin-bottom: 80px;
   }
 }
