--- a/index/static/css/style.css
+++ b/index/static/css/style.css
@@ -33,7 +33,7 @@
     height: 100vh;
     background-image: var(--body-bg);
     font-family: Helvetica, sans-serif;
-    overflow: auto;
+    overflow: hidden;
   }
   
 
@@ -446,23 +446,7 @@
     width: 100%;
     height: 100%;
   }
-  .msger-header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-  }
-
-  .msger-chat{
-    margin-top: 45px;
-  }
-
-  .msger-inputarea{
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
+  
 
   .msger-setting-body{
     width: 100%;
