--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -12,7 +12,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <link rel="shortcut icon" href="{% static 'img/chatbot.ico' %}" type="image/x-icon">
-  <link rel="apple-touch-icon" href="{% static 'img/chatbot.ico'' %">
+  <link rel="apple-touch-icon" href="{% static 'img/chatbot.ico' %">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
   <script language="javascript">
