--- a/index/static/css/style.css
+++ b/index/static/css/style.css
@@ -9,6 +9,7 @@
   
   html {
     box-sizing: border-box;
+    height: 100%;
   }
   
   *,
@@ -25,9 +26,6 @@
     text-decoration: none;
   }
 
-  html{
-    height: 100%;
-  }
   
   body {
     display: flex;
@@ -207,7 +205,6 @@
     border-bottom: var(--border);
     background: #eee;
     color: #666;
-    height: 45px;
   }
 
   .msger-header-prev,
@@ -450,6 +447,8 @@
   .msger{
     width: 100%;
     height: 100%;
+    border: 0;
+    margin: 0;
   }
   
 
