Update setting text

--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -50,7 +50,7 @@
           <h2>Settings</h2>
         </div>
         <div class="setting-time">
-          <p class="time-title">시간</p>
+          <p class="time-title"> 알림 시간</p>
           <div class="time-input">
             <div class="time-ampm">
               <p class="time-am selected">오전</p>
