--- a/index/static/css/style.css
+++ b/index/static/css/style.css
@@ -70,6 +70,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    right: 0;
     width: 100%;
     height: 100%;
     display: none; 
@@ -83,7 +84,7 @@
   } 
   .msger-setting-line{
     position: absolute; 
-    top: -5%; 
+    top: -3%; 
     left: 50%; 
     transform: translateX(-50%); 
     color: #fff;
