added changing password function

--- a/login/templates/changepassword.html
+++ b/login/templates/changepassword.html
@@ -5,10 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    {% comment %} <link rel="stylesheet" href="./login.css">
-    <link rel="stylesheet" href="./reset.css"> {% endcomment %}
-    <link href="../static/Login/login/reset.css" rel="stylesheet">
-    <link href="../static/Login/login/login.css" rel="stylesheet">
+    <link href="../static/Login/changepassword/reset.css" rel="stylesheet">
+    <link href="../static/Login/changepassword/changepassword.css" rel="stylesheet">
 </head>
 <body>
     <div class="nav">    
@@ -22,18 +20,23 @@
                     <input type="text" placeholder="ID" id="id">
                 </div>
                 <div class="input-section">
-                    <h4>PS</h4>
-                    <input type="password" placeholder="Password" id="ps">
+                    <h4>Email</h4>
+                    <input type="email" placeholder="이메일" id="email">
+                </div>
+                <div class="input-section">
+                    <h4>Old PS</h4>
+                    <input type="password" placeholder="예전 비밀번호" id="old-ps">
+                </div>                
+                <div class="input-section">
+                    <h4>New PS</h4>
+                    <input type="password" placeholder="새로운 비밀번호" id="new-ps">
                 </div>
                 <div class="button-section">
-                    <input type="button" id="btn-login" value="로그인">
-                    <input type="button" id="btn-signup" value="회원가입">
-                    <input type="button" id="btn-getreissuedpassword" value="비밀번호 재발급">
                     <input type="button" id="btn-changepassword" value="비밀번호 변경">
                 </div>
             </div>
         </section>
     </main>
-    <script src="../static/Login/login/event.js"></script>
+    <script src="../static/Login/changepassword/event.js"></script>
 </body>
 </html>
