--- a/static/Login/changepassword/changepassword.css
+++ b/static/Login/changepassword/changepassword.css
@@ -47,7 +47,7 @@ main{
 
 .login-section-inside{
     position: relative;
-    width: 60%;
+    width: 70%;
     height: 90%;
     top: 50%;
     left: 50%;
@@ -62,7 +62,7 @@ main{
     display: flex;
     justify-content: space-between;
     width: 100%;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
     font-family: 'Lobster', cursive;
     height: fit-content;
 }
@@ -76,14 +76,14 @@ main{
 }
 
 .input-section input{
-    width: 70%;
+    width: 55%;
     height: 2.5em;
     margin-right: 1em;
 }
 
-/* .button-section{
-    margin-top: 0 em;
-} */
+.button-section{
+    margin-top: 0.5em;
+}
 
 .button-section input{
     cursor: pointer;
@@ -105,6 +105,8 @@ main{
 }
 
 
+
+
 @media screen and (max-width:673px){
     .login-section{
         width: 95%;
@@ -113,5 +115,4 @@ main{
         width: 80%;
     }
 }
-
 
