--- a/static/Chatbot/chatlist/css/style.css
+++ b/static/Chatbot/chatlist/css/style.css
@@ -344,7 +344,7 @@ input[type="text"]::-ms-clear {
   }
   #content {
     margin-right: 0;
-    background-color: #fff;
+    background-color: #3ea2ff;
   }
 }
 @media screen and (max-width: 763px) {
