--- a/static/Analysis/analysis.css
+++ b/static/Analysis/analysis.css
@@ -39,9 +39,6 @@ body {
 
 
 .analysis-container {
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: space-between;
     width: calc(100% - 20px);
     max-width: 867px;
     margin: auto;
@@ -51,7 +48,6 @@ body {
     background: var(--msger-bg);
     box-shadow: 0 15px 15px -5px rgba(0, 0, 0, 0.2);
     position: fixed;
-    overflow: hidden;
 }
 
 
@@ -65,6 +61,7 @@ body {
     border-bottom: var(--border);
     background: var(--right-msg-bg-hover);
     color: #fff;
+    width: 100%;
 }
 
 .analysis-header-prev,
@@ -79,7 +76,7 @@ body {
 .analysis-image{
     display: flex;
     justify-content: space-between;
-    margin: 20px
+    margin: 50px
 
 }
 
@@ -103,7 +100,7 @@ body {
 
 /* analysis sentence emotion */
 .analysis-sentence{
-    margin: 20px;
+    margin: 50px;
     padding: 10px;
     text-align: center;
     border: var(--border);
@@ -137,12 +134,17 @@ body {
 
 
 @media screen and (max-width: 500px){
-.analysis-container{
-    width: 100%;
-    height: 100%;
-    border: 0;
-    margin: 0;
-    border-radius: 0;
-}
+    .analysis-container{
+        width: 100%;
+        height: 100%;
+        border: 0;
+        margin: 0;
+        border-radius: 0;
+    }
+
+    .analysis-image,
+    .analysis-sentence{
+        margin: 20px
+    }
 
 }
