--- a/static/Analysis/analysis.css
+++ b/static/Analysis/analysis.css
@@ -76,7 +76,7 @@ body {
 .analysis-image{
     display: flex;
     justify-content: space-between;
-    margin: 50px
+    margin: 50px;
 
 }
 
@@ -89,7 +89,7 @@ body {
 }
 
 .analysis-image-emotion-text{
-    /* text-align: center; */
+    text-align: center;
 }
 
 
@@ -133,6 +133,19 @@ body {
 }
 
 
+/* analysis sentence weekly */
+.analysis-chart{
+    width: 95%;
+    margin: 0 auto;
+}
+
+#weekly,
+#monthly{
+    width: 100%;
+    height: 100%;
+}
+
+
 @media screen and (max-width: 500px){
     .analysis-container{
         width: 100%;
@@ -142,7 +155,9 @@ body {
         border-radius: 0;
     }
 
-    .analysis-image,
+    .analysis-image{
+        margin: 30px;
+    }
     .analysis-sentence{
         margin: 20px
     }
