Modify Login page

--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -12,17 +12,18 @@
 </head>
 <body>
     <div class="nav">    
-        <li><a href="/">EMOCHATBOT</a></li>        
+        <li><a href="/">EmoChatbot</a></li>        
     </div>
     <main>
+        <div class='login-title'>Login</div>
         <section class="login-section">
             <div class="login-section-inside">
                 <div class="input-section">
-                    <h4>ID</h4>
+                    {% comment %} <h4>ID</h4> {% endcomment %}
                     <input type="text" placeholder="ID" id="id">
                 </div>
                 <div class="input-section">
-                    <h4>PS</h4>
+                    {% comment %} <h4>PW</h4> {% endcomment %}
                     <input type="password" placeholder="Password" id="ps">
                 </div>
                 <div class="button-section">
