--- a/login/templates/signup.html
+++ b/login/templates/signup.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="nav">    
-        <li><a href="/">EMOCHATBOT</a></li>        
+        <a href="/">EMOCHATBOT</a>      
     </div>
     <main>
         <section class="login-section">
