--- a/static/Login/login/login.css
+++ b/static/Login/login/login.css
@@ -3,40 +3,21 @@ a{color: black;}
 a:link { color: none; text-decoration: none;}
 a:visited { color: black; text-decoration: none;}
 a:hover { color: none; text-decoration: none;}
-.nav{
-    position: relative;
-    width: 100%;
-    height: 50px;
-    z-index: 999;
-    /* box-shadow: 2px 2px 20px gray; */
-    display: flex;
-    background-color: #4492FA;
-    /* font-family: 'Lobster', cursive; */
-    font-size: 20px;
-    font-weight: bold;
-}
-li{
-    position: relative;
-    height: fit-content;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    list-style: none;
-    padding-left: 0px;
-}
-main{
-    position: relative;
-    z-index: 999;
-    width: 100%;
-    height: calc(100vh - 50px);
-    background-color: #fcfcfe;
+
+
+
+.logo{
+    margin: 7rem auto 2rem 6.5rem;
 }
 
-.login-title{
-    margin: 70px auto 50px;
+.logo a{
     font-weight: bold;
     font-size: 30px;
-    text-align: center;
+    color: #4492FA;
+}
+.login-title{
+    line-height: 40px;
+    margin-left: 10px;
 }
 
 .login-section{
@@ -47,7 +28,7 @@ main{
     width: 40em;
     /* border-left: 2mm ridge #5b9cff;
     border-right: 2mm ridge #5b9cff; */
-    height: 30em;
+    /* height: 30em; */
     /* box-shadow: 10px 10px 50px gray; */
     border-radius: 20px;
     border: 2px solid #ddd;
@@ -70,24 +51,25 @@ main{
 }
 
 .input-section{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
+    /* display: flex;
+    justify-content: space-between; */
+    /* width: 100%; */
     margin-bottom: 20px;
     /* font-family: 'Lobster', cursive; */
     height: fit-content;
 }
 .input-section h4{
-    font-size: 1.25rem;
+    font-size: 0.75rem;
     /* background-color: teal; */
-    height: fit-content;
-    top: 50%;
-    transform: translateY(25%);
-    margin-left: 1em;
+    /* height: fit-content; */
+    /* top: 50%; */
+    /* transform: translateY(25%); */
+    margin-left: 0.5em;
+    margin-bottom: 5px;
 }
 
 .input-section input{
-    width: 100%;
+    width: calc(100% - 20px);
     height: 3.5em;
     /* margin-right: 1em; */
     background-color: #e9e9e9;
@@ -97,7 +79,8 @@ main{
     padding-left: 20px;
 }
 
-.button-section input{
+#btn-login,
+#btn-signup{
     cursor: pointer;
     width: 100%;
     height: 3.5em;
@@ -109,6 +92,18 @@ main{
     border:none;
     border-radius: 5px;
     color: white;
+}
+
+#btn-getreissuedpassword,
+#btn-changepassword{
+    background-color: #fff;
+    cursor: pointer;
+    border:none;
+    margin-top: 20px;]
+}
+
+#btn-getreissuedpassword{
+    margin-left: 30px;
 }
 
 .button-section input:hover{
