--- a/login/templates/changepassword.html
+++ b/login/templates/changepassword.html
@@ -9,27 +9,28 @@
     <link href="../static/Login/changepassword/changepassword.css" rel="stylesheet">
 </head>
 <body>
-    <div class="nav">    
-        <li><a href="/">EMOCHATBOT</a></li>        
-    </div>
     <main>
+        <div class='logo'>
+            <a href="/">EmoChatbot</a>
+            {% comment %} <div class='login-title'>Login</div> {% endcomment %}
+        </div>
         <section class="login-section">
             <div class="login-section-inside">
                 <div class="input-section">
-                    <h4>ID</h4>
+                    <h4>아이디</h4>
                     <input type="text" placeholder="ID" id="id">
                 </div>
                 <div class="input-section">
-                    <h4>Email</h4>
-                    <input type="email" placeholder="이메일" id="email">
+                    <h4>이메일</h4>
+                    <input type="email" placeholder="Email" id="email">
                 </div>
                 <div class="input-section">
-                    <h4>Old PS</h4>
-                    <input type="password" placeholder="예전 비밀번호" id="old-ps">
+                    <h4>이전 비밀번호</h4>
+                    <input type="password" placeholder="Password" id="old-ps">
                 </div>                
                 <div class="input-section">
-                    <h4>New PS</h4>
-                    <input type="password" placeholder="새로운 비밀번호" id="new-ps">
+                    <h4>새 비밀번호</h4>
+                    <input type="password" placeholder="New Password" id="new-ps">
                 </div>
                 <div class="button-section">
                     <input type="button" id="btn-changepassword" value="비밀번호 변경">
