--- a/login/templates/getreissuedpassword.html
+++ b/login/templates/getreissuedpassword.html
@@ -9,19 +9,20 @@
     <link href="../static/Login/getreissuedpassword/getreissuedpassword.css" rel="stylesheet">
 </head>
 <body>
-    <div class="nav">    
-        <li><a href="/">EMOCHATBOT</a></li>        
-    </div>
     <main>
+        <div class='logo'>
+            <a href="/">EmoChatbot</a>
+            {% comment %} <div class='login-title'>Login</div> {% endcomment %}
+        </div>
         <section class="login-section">
             <div class="login-section-inside">
                 <div class="input-section">
-                    <h4>ID</h4>
+                    <h4>아이디</h4>
                     <input type="text" placeholder="ID" id="id">
                 </div>
                 <div class="input-section">
-                    <h4 class="email">Email</h4>
-                    <input type="email" placeholder="이메일" id="email">
+                    <h4 class="email">이메일</h4>
+                    <input type="email" placeholder="Email" id="email">
                 </div>
                 <div class="button-section">
                     <input type="button" id="btn-getreissuedpassword" value="비밀번호 재발급">
