--- a/static/Chatbot/chatlist/css/style.css
+++ b/static/Chatbot/chatlist/css/style.css
@@ -171,9 +171,7 @@ input[type="number"]::-webkit-inner-spin-button {
   -ms-flex-order: 1;
   order: 1;
   position: relative;
-  min-width: 445px;
   margin: 0 10px;
-  border: 1px solid #d7dbe1; /* 방목록 테두리*/
 }
 .check_wrap {
   position: relative;
@@ -185,6 +183,10 @@ input[type="number"]::-webkit-inner-spin-button {
   width: 1px;
   height: 1px;
   margin: -1px;
+}
+
+.room{
+  border-bottom: 1px solid #ddd;
 }
 .check_wrap input[type="checkbox"] + label .check_box {
   display: inline-block;
@@ -1009,4 +1011,35 @@ html[data-os*="window"][data-browser*="ie"]
   right: 0;
   left: 14px;
   padding: 120px 14px 24px 0;
+}
+
+@media screen and (max-width: 500px) {
+  #__next,
+  #wrap,
+  #container,
+  body,
+  html,
+  .blind,
+  #content,
+  .chat_section{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    border: 0;
+  }
+
+  .chat_list_search{
+    width: 100%;
+    margin: 0;
+    border: 0;
+  }
+
+
+  #header,
+  aside,
+  .blind{
+    display:none;
+  }
 }
