--- a/static/Analysis/analysis.css
+++ b/static/Analysis/analysis.css
@@ -4,7 +4,7 @@
     --border: 2px solid #ddd;
     --left-msg-bg: #ececec;
     --right-msg-bg: #579ffb;
-    --right-msg-bg-hover: #4492FA;
+    --right-msg-bg-hover: #3ea2ff;
 }
 
 html {
