--- a/static/Chatbot/chatroom/css/style.css
+++ b/static/Chatbot/chatroom/css/style.css
@@ -3,8 +3,8 @@
     --msger-bg: #fff;
     --border: 2px solid #ddd;
     --left-msg-bg: #ececec;
-    --right-msg-bg: #579ffb;
-    --right-msg-bg-hover: #4492FA;
+    --right-msg-bg: #3ea2ff;
+    --right-msg-bg-hover: #3ea2ff;
   }
   
   html {
