--- a/static/Analysis/analysis.css
+++ b/static/Analysis/analysis.css
@@ -48,11 +48,17 @@ body {
     background: var(--msger-bg);
     box-shadow: 0 15px 15px -5px rgba(0, 0, 0, 0.2);
     position: fixed;
+    overflow: auto;
+    font-family: NEXON Lv1 Gothic OTF;
 }
 
 
 /* analysis header */
 .analysis-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     display: flex;
     font-size: medium;
     justify-content: space-between;
@@ -147,6 +153,13 @@ body {
 
 
 @media screen and (max-width: 500px){
+    body{ 
+        -ms-overflow-style: none; 
+    } 
+    ::-webkit-scrollbar { 
+        display: none; 
+    }
+
     .analysis-container{
         width: 100%;
         height: 100%;
@@ -157,9 +170,17 @@ body {
 
     .analysis-image{
         margin: 30px;
+        margin-top: 70px;
     }
     .analysis-sentence{
         margin: 20px
     }
 
+}
+
+@font-face {
+    font-family: 'NEXON Lv1 Gothic OTF';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
