--- a/static/Chatbot/chatlist/css/style.css
+++ b/static/Chatbot/chatlist/css/style.css
@@ -2,6 +2,7 @@ body,
 #__next,
 #wrap {
   height: 100%;
+  font-family: 'NEXON Lv1 Gothic OTF';
 }
 ul,
 ol,
@@ -15,6 +16,14 @@ li {
   width: 1px;
   height: 1px;
   margin: -1px;
+}
+
+/* 스크롤 바 스타일 없애기 */
+body{ 
+  -ms-overflow-style: none; 
+} 
+::-webkit-scrollbar { 
+    display: none; 
 }
 body {
   /* background-color: #e3e5e8; */
@@ -1039,4 +1048,11 @@ html[data-os*="window"][data-browser*="ie"]
   .blind{
     display:none;
   }
+}
+
+@font-face {
+  font-family: 'NEXON Lv1 Gothic OTF';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
