--- a/static/Login/getreissuedpassword/getreissuedpassword.css
+++ b/static/Login/getreissuedpassword/getreissuedpassword.css
@@ -3,8 +3,10 @@ a{color: black;}
 a:link { color: none; text-decoration: none;}
 a:visited { color: black; text-decoration: none;}
 a:hover { color: none; text-decoration: none;}
+
 .logo{
     margin: 7rem auto 2rem 6.5rem;
+    font-family: 'NEXON Lv1 Gothic OTF';
 }
 
 .logo a{
@@ -22,6 +24,7 @@ a:hover { color: none; text-decoration: none;}
     border-radius: 20px;
     border: 2px solid #ddd;
     margin: auto;
+    font-family: 'NEXON Lv1 Gothic OTF';
 }
 
 .login-section-inside{
@@ -64,6 +67,7 @@ a:hover { color: none; text-decoration: none;}
     border:none;
     border-radius: 5px;
     color: white;
+    font-family: 'NEXON Lv1 Gothic OTF';
 }
 
 
@@ -78,3 +82,9 @@ a:hover { color: none; text-decoration: none;}
     }
 }
 
+@font-face {
+    font-family: 'NEXON Lv1 Gothic OTF';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
