--- a/index/templates/index_real_chat.html
+++ b/index/templates/index_real_chat.html
@@ -15,21 +15,14 @@
   <link rel="apple-touch-icon" href="{% static 'Chatbot/img/chatbot.ico' %}">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
-  <script language="javascript">
-    function time(){
-        var time= new Date(); //시간받기위해서 new date
-        document.getElementById("now").innerHTML=time.getHours()+":"+time.getMinutes();
-    }
-  </script>
-
 </head>
 
-<body onload="time()">
+<body>
   <section class="msger">
     <header class="msger-header">
       <i class="fas fa-chevron-left msger-header-prev" onclick="setting_prev()"></i>
       <div class="msger-header-title">
-        
+
       </div>
       <i class="fas fa-ellipsis-h msger-header-setting" onclick="setting_open()"></i>
     </header>
@@ -43,7 +36,7 @@
       <button type="submit" class="msger-send-btn">Send</button>
     </form>
 
-    <div class="msger-setting"> 
+    <div class="msger-setting">
       <div class="msger-setting-body">
         <hr class="msger-setting-line">
         <div class="setting-title">
@@ -85,13 +78,13 @@
           </div>
         </div>
         <div class="msger-setting-save" onclick="setting_notice_time()">저장</div>
-      </div> 
+      </div>
     </div>
   </section>
   <!-- partial -->
   <script src='https://use.fontawesome.com/releases/v5.0.13/js/all.js'></script>
-  <script type="text/javascript" src="{% static 'Chatbot/chatroom/js/event.js' %}"></script>
-  <script type="text/javascript" src="{% static 'Chatbot/chatroom/js/main.js' %}"></script>
+  <script type="text/javascript" src="{% static 'Chatbot/chatroom/js/real_webSocket.js' %}"></script>
+  <script type="text/javascript" src="{% static 'Chatbot/chatroom/js/real_event.js' %}"></script>
 </body>
 
 </html>
