modified html and css

--- a/login/templates/changepassword.html
+++ b/login/templates/changepassword.html
@@ -9,10 +9,11 @@
     <link href="../static/Login/changepassword/changepassword.css" rel="stylesheet">
 </head>
 <body>
-    <div class="nav">    
-        <li><a href="/">EMOCHATBOT</a></li>        
-    </div>
     <main>
+        <div class='logo'>
+            <a href="/">EmoChatbot</a>
+            {% comment %} <div class='login-title'>Login</div> {% endcomment %}
+        </div>
         <section class="login-section">
             <div class="login-section-inside">
                 <div class="input-section">
