--- a/login/templates/signup.html
+++ b/login/templates/signup.html
@@ -9,8 +9,11 @@
     <link href="../static/Login/signup/reset.css" rel="stylesheet">
 </head>
 <body>
-    <div class="nav">    
-        <li><a href="/">EMOCHATBOT</a></li>        
+
+    </div>
+        <div class='logo'>
+        <a href="/">EmoChatbot</a>
+            {% comment %} <div class='login-title'>Login</div> {% endcomment %}
     </div>
     <main>
         <section class="login-section">
